docs/_adoc_includes/turing/0.3.9/api/turing-api-search-with-targeting-rules.adoc
==== Search with Targeting Rules

Search on the semantic navigation site adding segmentation, restricting content based on defined segments.

===== API Endpoint
....
POST http://localhost:2700/api/sn/{{siteName}}/search
....

===== Headers

include::turing-api-headers.adoc[]

===== Path Parameters

include::turing-api-path.adoc[]

===== Query String

include::turing-api-query-string.adoc[]


===== Request Parameters

include::turing-api-request.adoc[]

===== Example - Request
```bash
curl -X 'POST' \
  'http://localhost:2700/api/sn/Sample/search?q=foobar&p=1&fq%5B%5D=state%3AWA&sort=relevance&rows=10&nfpr=0&_setlocale=en_US' \
  -H 'Content-Type: application/json' \
  -H 'Key: {{Enter your API KEY}}' \
  -d '{
  "userId": "string",
  "populateMetrics": true,
  "targetingRules": [
    "department:HR",
    "profile:Principal"
  ]
}'
```

===== Example - Request
```bash
curl -X 'POST' \
  'http://localhost:2700/api/sn/Sample/search?q=foobar&p=1&fq%5B%5D=state%3AWA&sort=relevance&rows=10&nfpr=0&_setlocale=en_US' \
  -H 'Content-Type: application/json' \
  -H 'Key: {{Enter your API KEY}}' \
  -d '{
  "userId": "string",
  "populateMetrics": true,
  "targetingRulesCondition": {
        "type:News": [
            "department:HR",
            "profile:Principal"
        ],
        "type:Article": [
            "department:IT",
            "profile:Consultant"
        ]
   },
   "targetingRulesConditionAND": {
        "type:Event": [
            "department:HR",
            "profile:Manager"
        ],
        "type:Report": [
            "department:IT",
            "profile:Coordinator"
        ]
   },
   "targetingRulesConditionOR": {
        "type:Faq": [
            "department:HR",
            "profile:Junior"
        ],
        "type:Text": [
            "department:IT",
            "profile:Junior"
        ]
   }
}'
```

===== Example - Response

```json
{
    "pagination": [
        {
            "type": "CURRENT",
            "text": "1",
            "href": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance",
            "page": 1
        },
        {
            "type": "PAGE",
            "text": "2",
            "href": "/api/sn/Sample/search?q=foobar&p=2&_setlocale=en_US&sort=relevance",
            "page": 2
        },
        {
            "type": "PAGE",
            "text": "3",
            "href": "/api/sn/Sample/search?q=foobar&p=3&_setlocale=en_US&sort=relevance",
            "page": 3
        },
        {
            "type": "PAGE",
            "text": "4",
            "href": "/api/sn/Sample/search?q=foobar&p=4&_setlocale=en_US&sort=relevance",
            "page": 4
        },
        {
            "type": "NEXT",
            "text": "Next",
            "href": "/api/sn/Sample/search?q=foobar&p=2&_setlocale=en_US&sort=relevance",
            "page": 2
        },
        {
            "type": "LAST",
            "text": "Last",
            "href": "/api/sn/Sample/search?q=foobar&p=480&_setlocale=en_US&sort=relevance",
            "page": 480
        }
    ],
    "queryContext": {
        "count": 4795,
        "index": "Sample",
        "limit": 10,
        "offset": 0,
        "page": 1,
        "pageCount": 480,
        "pageEnd": 10,
        "pageStart": 1,
        "responseTime": 51,
        "query": {
            "queryString": "foobar",
            "sort": "relevance",
            "locale": "en_US"
        },
        "defaultFields": {
            "title": "title",
            "date": "publicationDate",
            "description": "texts",
            "text": "text",
            "image": "image",
            "url": "url"
        }
    },
    "results": {
        "document": [
            {
                "source": "https://www.example.com/0df43c64ebeeb710VgnVCM100000d701210aRCRD",
                "elevate": false,
                "metadata": [
                    {
                        "href": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=site%3ASample Site",
                        "text": "Sample Site"
                    },
                    {
                        "href": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=categories%3AInova%C3%A7%C3%A3o",
                        "text": "Inovation"
                    },
                    {
                        "href": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=type%3ANews",
                        "text": "News"
                    }
                ],
                "fields": {
                    "author": "john",
                    "description": "Loren",
                    "title": "Loren",
                    "type": "News",
                    "url": "https://www.example.com/0df43c64ebeeb710VgnVCM100000d701210aRCRD",
                    "state": [
                        "MA"
                    ],
                    "modificationDate": "2021-09-16T13:28:54.000+00:00",
                    "site": "Sample Site",
                    "texts": [
                        "..."
                    ],
                    "provider": "Sample Site",
                    "_version_": 1765073243578826752,
                    "id": "0df43c64ebeeb710VgnVCM100000d701210aRCRD",
                    "categories": [
                        "Inovation"
                    ],
                    "source_apps": [
                        "WEM"
                    ],
                    "publicationDate": "2021-09-16T13:28:59.000+00:00"
                }
            }
        ]
    },
    "groups": [],
    "widget": {
        "facet": [
            {
                "facets": [
                    {
                        "count": 2343,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=type%3AArticle",
                        "label": "Article"
                    },
                    {
                        "count": 485,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=type%3ANews",
                        "label": "News"
                    },
                    {
                        "count": 267,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=type%3AVideo",
                        "label": "Video"
                    },
                    {
                        "count": 171,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=type%3AFaq",
                        "label": "Faq"
                    }
                ],
                "label": {
                    "lang": "en",
                    "text": "Types"
                },
                "name": "type",
                "description": "Content Type Field",
                "type": "STRING",
                "multiValued": false
            },
            {
                "facets": [
                    {
                        "count": 4764,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=site%3ASample Site",
                        "label": "Sample Site"
                    }
                ],
                "label": {
                    "lang": "en",
                    "text": "Sites"
                },
                "name": "site",
                "description": "Site Name",
                "type": "STRING",
                "multiValued": false
            },
            {
                "facets": [
                    {
                        "count": 2603,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=categories%3AInova%C3%A7%C3%A3o",
                        "label": "Inovation"
                    },
                    {
                        "count": 300,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=categories%3AINOVA%C3%87%C3%83O",
                        "label": "Inovation"
                    }                 
                ],
                "label": {
                    "lang": "en",
                    "text": "Categories"
                },
                "name": "categories",
                "description": "Categories",
                "type": "STRING",
                "multiValued": true
            },
            {
                "facets": [
                    {
                        "count": 2145,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=state%3ANA",
                        "label": "NA"
                    },
                    {
                        "count": 325,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=state%3ASC",
                        "label": "SC"
                    },
                    {
                        "count": 297,
                        "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&fq[]=state%3APE",
                        "label": "PE"
                    }
                ],
                "label": {
                    "lang": "en",
                    "text": "States"
                },
                "name": "state",
                "description": "State",
                "type": "STRING",
                "multiValued": true
            }
        ],
        "facetToRemove": null,
        "similar": null,
        "spellCheck": {
            "correctedText": false,
            "usingCorrectedText": true,
            "original": {
                "text": "foobar",
                "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance&nfpr=1"
            },
            "corrected": {
                "text": "",
                "link": "/api/sn/Sample/search?q=&p=1&_setlocale=en_US&sort=relevance"
            }
        },
        "locales": [
            {
                "locale": "en_US",
                "link": "/api/sn/Sample/search?q=foobar&p=1&_setlocale=en_US&sort=relevance"
            }
        ],
        "spotlights": []
    }
}
```
